--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -4,3 +4,15 @@ $transition-easing: ease
 $font-weight-normal: 300
 $font-weight-base: 300
 $font-weight-bold: 500
+$main-spacing-top: 2rem
+$main-padding: 2rem
+
+// MIN WIDTH
+$xs: 0px
+$sm: 576px //phone
+$md: 768px //tablet
+$lg: 992px //desktop
+$xl: 1200px //wide
+$xxl: 1400px //extra wide
+
+$breakpoints: ('xs': $xs, 'sm': $sm, 'md': $md, 'lg': $lg, 'xl': $xl, 'xxl': $xxl)
