--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -1,12 +1,13 @@
-<div class="main-wrapper">
+<div class="main-wrapper" #mainWrapper>
   <a class="side-label-title" routerLink="/">Advent of Code 2022</a>
   <a class="side-label-github" href="https://github.com/pogush/aoc22" target="_blank">
     <i class="gg-git-fork"></i>
   </a>
-  <a class="side-label-website" href="https://github.com/pogush/aoc22" target="_blank">
-    <i class="gg-git-fork"></i>
+  <a class="side-label-website" href="https://adventofcode.com/2022" target="_blank">
+    <i class="gg-website"></i>
   </a>
   <div class="main">
     <router-outlet></router-outlet>
   </div>
+  <app-footer></app-footer>
 </div>
