--- a/src/app/main/footer/footer.component.html
+++ b/src/app/main/footer/footer.component.html
@@ -1,3 +1,3 @@
 <a routerLink="/">Home</a>
-<a routerLink="https://adventofcode.com/2022">AoC2022</a>
-<a routerLink="https://github.com/pogush/aoc22">Github</a>
+<a href="https://adventofcode.com/2022" target="_blank">AoC2022</a>
+<a href="https://github.com/pogush/aoc22" target="_blank">Github</a>
