--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,4 +1,5 @@
 <nav class="days">
   <a [routerLink]="['day', '01']">Day 01</a>
   <a [routerLink]="['day', '02']">Day 02</a>
+  <a [routerLink]="['day', '03']">Day 03</a>
 </nav>
