--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -2,4 +2,6 @@
   <a [routerLink]="['day', '01']">Day 01</a>
   <a [routerLink]="['day', '02']">Day 02</a>
   <a [routerLink]="['day', '03']">Day 03</a>
+  <a [routerLink]="['day', '04']">Day 04</a>
+  <a [routerLink]="['day', '05']">Day 05</a>
 </nav>
