--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -4,4 +4,5 @@
   <a [routerLink]="['day', '03']">Day 03</a>
   <a [routerLink]="['day', '04']">Day 04</a>
   <a [routerLink]="['day', '05']">Day 05</a>
+  <a [routerLink]="['day', '06']">Day 06</a>
 </nav>
