--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -5,4 +5,5 @@
   <a [routerLink]="['day', '04']">Day 04</a>
   <a [routerLink]="['day', '05']">Day 05</a>
   <a [routerLink]="['day', '06']">Day 06</a>
+  <a [routerLink]="['day', '07']">Day 07</a>
 </nav>
