--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -6,4 +6,5 @@
   <a [routerLink]="['day', '05']">Day 05</a>
   <a [routerLink]="['day', '06']">Day 06</a>
   <a [routerLink]="['day', '07']">Day 07</a>
+  <a [routerLink]="['day', '08']">Day 08</a>
 </nav>
