--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -7,4 +7,5 @@
   <a [routerLink]="['day', '06']">Day 06</a>
   <a [routerLink]="['day', '07']">Day 07</a>
   <a [routerLink]="['day', '08']">Day 08</a>
+  <a [routerLink]="['day', '09']">Day 09</a>
 </nav>
