Add empty day10

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -8,4 +8,5 @@
   <a [routerLink]="['day', '07']">Day 07</a>
   <a [routerLink]="['day', '08']">Day 08</a>
   <a [routerLink]="['day', '09']">Day 09</a>
+  <a [routerLink]="['day', '10']">Day 10</a>
 </nav>
