--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -9,4 +9,5 @@
   <a [routerLink]="['day', '08']">Day 08</a>
   <a [routerLink]="['day', '09']">Day 09</a>
   <a [routerLink]="['day', '10']">Day 10</a>
+  <a [routerLink]="['day', '11']">Day 11</a>
 </nav>
