--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -10,4 +10,5 @@
   <a [routerLink]="['day', '09']">Day 09</a>
   <a [routerLink]="['day', '10']">Day 10</a>
   <a [routerLink]="['day', '11']">Day 11</a>
+  <a [routerLink]="['day', '12']">Day 12</a>
 </nav>
