--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -12,4 +12,5 @@
   <a [routerLink]="['day', '11']">Day 11</a>
   <a [routerLink]="['day', '12']">Day 12</a>
   <a [routerLink]="['day', '13']">Day 13</a>
+  <a [routerLink]="['day', '14']">Day 14</a>
 </nav>
