Add day15 (part1)

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -13,4 +13,5 @@
   <a [routerLink]="['day', '12']">Day 12</a>
   <a [routerLink]="['day', '13']">Day 13</a>
   <a [routerLink]="['day', '14']">Day 14</a>
+  <a [routerLink]="['day', '15']">Day 15</a>
 </nav>
