Add day16 (part1)

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -14,4 +14,5 @@
   <a [routerLink]="['day', '13']">Day 13</a>
   <a [routerLink]="['day', '14']">Day 14</a>
   <a [routerLink]="['day', '15']">Day 15</a>
+  <a [routerLink]="['day', '16']">Day 16</a>
 </nav>
