--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -15,4 +15,5 @@
   <a [routerLink]="['day', '14']">Day 14</a>
   <a [routerLink]="['day', '15']">Day 15</a>
   <a [routerLink]="['day', '16']">Day 16</a>
+  <a [routerLink]="['day', '17']">Day 17</a>
 </nav>
